tests/scripts/errors/parse/assign_to_call.cdo
FUNCTION f() { RETURN 1; }
f() = 5;
